# Random-tests

./: Anchor.toml  README.md
programs/random-tests/: Cargo.toml
programs/random-tests/src/: lib.rs
programs/random-tests/src/instructions/: mod.rs  test_allocation.rs  test_function_recurse.rs  test_function_recurse_with_log.rs  test_loop.rs  test_loop_with_log.rs  test_print_transaction.rs  test_ser_de_compute.rs
programs/random-tests/tests/: test.rs
